* 2016.06.19 * fixing Boost description for Linux

* 2016.06.11 * added support to skip GPU detection (for example, not needed 
               during compiler flag crowd-tuning but may cause problems),
               and to force platform.init UOA

* 2016.06.07 * improving package manager:
               - detecting host CPU info and passing CK_HOST_CPU_NUMBER_OF_PROCESSORS to process script
               - passing extra env to process script
               - running pre-processing python script
               - running scripts from another entry (light inheritance)
               - adding CLBLAST soft description

* 2016.05.30 * support for new CK web server

* 2016.05.29 - adding 'exchange_locally' mode to platform.* detection and info exchange

* 2016.05.17 - improving different soft description
             - adding soft description for cuBLAS, cuFFT and cuDNN

* 2016.05.16 - changing CK_CC to CK_NVCC for CUDA soft description

* 2016.05.15 - removing outdated remote-ck1 repository

* 2016.05.13 - moving platform.gpgpu to ck-autotuning repo

* 2016.05.09 - adding 7z to Windows OS env

* 2016.05.06 - adding Julia compiler (after MIT visit)

* 2016.04.28 - major update to automate detection of installed software (for Windows, Linux and Android).
               To some extent, CK now works as a customizable cmake with the ability to share 
               software detection modules in the CK format via GitHub.

* 2016.04.18 - adding compiler flag via environment -std=c++0x (CK_COMPILER_FLAG_CPP0X)

* 2016.04.15 - moved platform.init entries from ck-autotuning here
             - added windows tools to windows-32 OS entry
             - added DragonBoard platform.init  
             - improving software/package installation; showing wiki page when problem
             - added possibility to show user-friendly soft description when resolving dependencies

* 2016.04.14 - added lib.toon for PAMELA project